# qec-with-code

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
notebooks/: bivariate_bicycle_code.ipynb  repetition_code.ipynb  rotated_surface_code.ipynb  shor_code.ipynb
qec/: __init__.py  measurement.py  stab.py
qec/codes/: __init__.py  base_code.py  bivariate_bicycle_code.py  repetition_code.py  rotated_surface_code.py  shor_code.py  twod_lattice.py
qec/lab/: __init__.py
qec/lab/threshold/: __init__.py  threshold_lab.py
qec/syndrome/: measurement.py
src/: __init__.py
src/qec/: __init__.py  qec.py  repetition.py
src/qec/codes/: __init__.py  base_code.py  repetition_code.py  rotated_surface_code.py  surface_code.py  twod_lattice.py
src/qec/syndrome/: __init__.py  measurement.py
tests/: test_measurement.py  test_stab.py
tests/codes/: test_bivariate_bicycle_code.py  test_repetition_code.py  test_rotated_surface_code.py  test_surface_code.py  test_twod_lattice.py
tests/lab/threshold/: test_threshold_lab.py
tests/qec/: test_qec.py  test_repetition.py
tests/syndrome/: test_measurement.py
