[project]
name = "qec"
version = "0.0.1"
description = "A collection of QEC implementations."
authors = [{ name = "Adel Sohbi", email = "adel.sohbi@gmail.com" }]
readme = "README.md"
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.14",
    "stim>=1.14.0",
    "pymatching>=2.2.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5"
]

[project.optional-dependencies]
docs = [
  "jupyter-book>=1.0",
  "jupytext>1.12"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=3.0.0",
  "black>=24.10.0",
  "flake8>=7.1.1",
  "pre-commit>=4.0.1"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qec"]
include-package-data = true

[tool.black]
line-length = 88
